<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20px"
    tools:context=".FormularioActivity">

    <TextView
        android:id="@+id/LblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:layout_marginBottom="10px"
        />
    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hntNombre"
        />
    <TextView
        android:id="@+id/LblEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEdad"
        />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hntEdad"
        android:width="300px"
        />

    <TextView
        android:id="@+id/LblCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCiudad"
        />

    <EditText
        android:id="@+id/txtCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hntCiudad"
        android:width="300px"
        />

    <TextView
        android:id="@+id/LblCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCorreo"
        />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hntCorreo"
        />
    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContinuar"
        />

</LinearLayout>